--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Tychio",
   "license": "ISC",
   "dependencies": {
-    "commander": "^11.0.0"
-  }
+    "commander": "^11.0.0",
+    "muhammara": "^4.0.0"
+  },
+  "type": "module"
 }
